feat: add initial TopBar

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,6 +1,6 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
+@import 'tailwindcss/base';
+@import 'tailwindcss/components';
+@import 'tailwindcss/utilities';
 
 :root {
   --foreground-rgb: 0, 0, 0;
@@ -17,13 +17,8 @@
 }
 
 body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+  @apply text-[rgb(var(--foreground-rgb))] bg-cover h-screen w-screen bg-gradient-to-br dark:bg-slate-50 bg-[#F1F0F2];
+  
 }
 
 @layer utilities {
