--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3,9 +3,9 @@
 @tailwind utilities;
   
 
-/* body {
-    background-color: #f034bc;
-} */
+body {
+    @apply bg-gradient-to-br from-gray-900 via-gray-800 to-black text-white;
+}
 
 html {
     scroll-behavior: smooth;
